--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.blankj:utilcode:1.22.10'
-    api project(path: ':androidUtil')
-//    api("com.android:util:1.0.36")
+//    api project(path: ':androidUtil')
+    api("com.android:util:1.0.36")
 
     implementation "androidx.core:core-ktx:1.2.0"
 
