--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 
-include ':app' ,':androidUtil'
-project(':androidUtil').projectDir = new File('../CasanubeHealth/androidUtil')
+include ':app' /*,':androidUtil'*/
+//project(':androidUtil').projectDir = new File('../CasanubeHealth/androidUtil')
 
