--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,15 +20,24 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".tool.rx.WriteRxjavaActivity">
+        <activity
+                android:name=".mvvm.dongnao.viewmodel.VIewModel1Activity"
+                android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+                android:name=".mvvm.dongnao.lifecycle.Step2Activity"
+                android:exported="true">
+
+        </activity>
+        <activity android:name=".tool.rx.WriteRxjavaActivity"></activity>
         <activity android:name=".net.OkhtttpActivity" />
-        <activity android:name=".permission.PemissionxUseActivity"></activity>
+        <activity android:name=".permission.PemissionxUseActivity" />
         <activity android:name=".tool.audio.AudioRecordActivity" />
         <activity android:name=".mvvm.fragment.MvvMFragmentActivity" />
         <activity android:name=".tool.rx.RxJavaActivity" />
@@ -54,13 +63,11 @@
             <!-- 用于设置FileProvider的文件访问路径 -->
         </provider>
 
-        <activity android:name=".customview.DrawPathActivity">
-
-        </activity>
+        <activity android:name=".customview.DrawPathActivity" />
         <activity android:name=".customview.StrapSleepActivity" />
         <activity android:name=".tool.date.DateActivity" />
         <activity android:name=".ui.viewpager.ScreenSlidePagerActivity" />
-        <activity android:name=".tool.LogActivity"></activity>
+        <activity android:name=".tool.LogActivity" />
         <activity android:name=".ui.custom.CustomViewActivity" />
         <activity android:name=".arch.viewmodel.ViewModelActivity" />
         <activity android:name=".time.TextClockActivity" />
